tests/bad/structs/1.lat
class A {
    B z;
}

int main() {
    return 0;
}